--- a/Python/start_and_end.ipynb
+++ b/Python/start_and_end.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,18 +318,29 @@
     "\n",
     "data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)\n",
     "\n",
-    "apex = -1\n",
+    "pos = -1\n",
+    "neg = -1\n",
+    "min = float('inf')\n",
     "max = -float('inf')\n",
-    "for i in range(len(data['controller_right_vel'])):\n",
-    "    if float(data['controller_right_vel'][i]) > max:\n",
-    "        max = float(data['controller_right_vel'][i])\n",
-    "        apex = i\n",
+    "for i in range(len(data['controller_right_vel.z'])):\n",
+    "    if float(data['controller_right_vel.z'][i]) > max:\n",
+    "        max = float(data['controller_right_vel.z'][i])\n",
+    "        pos = i\n",
+    "    if float(data['controller_right_vel.z'][i]) < min:\n",
+    "        min = float(data['controller_right_vel.z'][i])\n",
+    "        neg = i\n",
     "\n",
-    "for i in range(len(data['controller_right_vel.z'])-1):\n",
-    "    if abs(data['controller_right_vel.z'][i]) < 0.2 and abs(data['controller_right_vel.z'][i+1]) >= 0.2:\n",
-    "        start = i+1\n",
+    "#for i in range(len(data['controller_right_vel.z'])-1):\n",
+    "#    if abs(data['controller_right_vel.z'][i]) < 0.2 and abs(data['controller_right_vel.z'][i+1]) >= 0.2:\n",
+    "#        start = i+1\n",
+    "#        break\n",
+    "\n",
+    "for i in range(pos, 0, -1):\n",
+    "    if abs(data['controller_right_vel.z'][i]) >= 0.2 and abs(data['controller_right_vel.z'][i-1]) < 0.2:\n",
+    "        start = i\n",
     "        break\n",
-    "for i in range(apex, len(data['controller_right_vel.z'])-1):\n",
+    "\n",
+    "for i in range(neg, len(data['controller_right_vel.z'])-1):\n",
     "    if abs(data['controller_right_vel.z'][i]) >= 0.2 and abs(data['controller_right_vel.z'][i+1]) < 0.2:\n",
     "        end = i+1\n",
     "        break\n"
@@ -337,27 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16, 115)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(start, end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,18 +365,24 @@
     "\n",
     "    data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)\n",
     "\n",
-    "    apex = -1\n",
+    "    pos = -1\n",
+    "    neg = -1\n",
+    "    min = float('inf')\n",
     "    max = -float('inf')\n",
-    "    for i in range(len(data['controller_right_vel'])):\n",
-    "        if float(data['controller_right_vel'][i]) > max:\n",
-    "            max = float(data['controller_right_vel'][i])\n",
-    "            apex = i\n",
+    "    for i in range(len(data['controller_right_vel.z'])):\n",
+    "        if float(data['controller_right_vel.z'][i]) > max:\n",
+    "            max = float(data['controller_right_vel.z'][i])\n",
+    "            pos = i\n",
+    "        if float(data['controller_right_vel.z'][i]) < min:\n",
+    "            min = float(data['controller_right_vel.z'][i])\n",
+    "            neg = i\n",
     "\n",
-    "    for i in range(len(data['controller_right_vel.z'])-1):\n",
-    "        if abs(data['controller_right_vel.z'][i]) < 0.2 and abs(data['controller_right_vel.z'][i+1]) >= 0.2:\n",
-    "            start = i+1\n",
+    "    for i in range(pos, 0, -1):\n",
+    "        if abs(data['controller_right_vel.z'][i]) >= 0.2 and abs(data['controller_right_vel.z'][i-1]) < 0.2:\n",
+    "            start = i\n",
     "            break\n",
-    "    for i in range(apex, len(data['controller_right_vel.z'])-1):\n",
+    "\n",
+    "    for i in range(neg, len(data['controller_right_vel.z'])-1):\n",
     "        if abs(data['controller_right_vel.z'][i]) >= 0.2 and abs(data['controller_right_vel.z'][i+1]) < 0.2:\n",
     "            end = i+1\n",
     "            break\n",
@@ -395,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(22, 133)"
+       "(82, 133)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,191 +422,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      0.150920\n",
-      "1      0.168342\n",
-      "2      0.185723\n",
-      "3      0.190253\n",
-      "4      0.187492\n",
-      "5      0.184344\n",
-      "6      0.185832\n",
-      "7      0.192218\n",
-      "8      0.196822\n",
-      "9      0.196486\n",
-      "10     0.189796\n",
-      "11     0.174405\n",
-      "12     0.142225\n",
-      "13     0.111205\n",
-      "14     0.080628\n",
-      "15     0.046063\n",
-      "16     0.008167\n",
-      "17    -0.025355\n",
-      "18    -0.054109\n",
-      "19    -0.088162\n",
-      "20    -0.125936\n",
-      "21    -0.164720\n",
-      "22    -0.205108\n",
-      "23    -0.243269\n",
-      "24    -0.274229\n",
-      "25    -0.293228\n",
-      "26    -0.305203\n",
-      "27    -0.323482\n",
-      "28    -0.360400\n",
-      "29    -0.406001\n",
-      "30    -0.449444\n",
-      "31    -0.502347\n",
-      "32    -0.552878\n",
-      "33    -0.604841\n",
-      "34    -0.663122\n",
-      "35    -0.711439\n",
-      "36    -0.752829\n",
-      "37    -0.789609\n",
-      "38    -0.829734\n",
-      "39    -0.868565\n",
-      "40    -0.906304\n",
-      "41    -0.940149\n",
-      "42    -0.979173\n",
-      "43    -1.030636\n",
-      "44    -1.078260\n",
-      "45    -1.097378\n",
-      "46    -1.093161\n",
-      "47    -1.073031\n",
-      "48    -1.042216\n",
-      "49    -1.013901\n",
-      "50    -0.993266\n",
-      "51    -0.980666\n",
-      "52    -0.977073\n",
-      "53    -0.979700\n",
-      "54    -0.970328\n",
-      "55    -0.956660\n",
-      "56    -0.960299\n",
-      "57    -0.987681\n",
-      "58    -1.030330\n",
-      "59    -1.064853\n",
-      "60    -1.061889\n",
-      "61    -1.049121\n",
-      "62    -1.047936\n",
-      "63    -1.044507\n",
-      "64    -1.024271\n",
-      "65    -0.991059\n",
-      "66    -0.965679\n",
-      "67    -0.933395\n",
-      "68    -0.878000\n",
-      "69    -0.796653\n",
-      "70    -0.701513\n",
-      "71    -0.626037\n",
-      "72    -0.583822\n",
-      "73    -0.530940\n",
-      "74    -0.442693\n",
-      "75    -0.348731\n",
-      "76    -0.273557\n",
-      "77    -0.230252\n",
-      "78    -0.195274\n",
-      "79    -0.111747\n",
-      "80    -0.015837\n",
-      "81     0.145270\n",
-      "82     0.253570\n",
-      "83     0.352900\n",
-      "84     0.453341\n",
-      "85     0.599441\n",
-      "86     0.813546\n",
-      "87     0.985632\n",
-      "88     1.140175\n",
-      "89     1.297627\n",
-      "90     1.451136\n",
-      "91     1.654395\n",
-      "92     1.882403\n",
-      "93     2.148956\n",
-      "94     2.417895\n",
-      "95     2.715508\n",
-      "96     3.019035\n",
-      "97     3.349361\n",
-      "98     3.644116\n",
-      "99     3.983170\n",
-      "100    4.266196\n",
-      "101    4.482413\n",
-      "102    4.660262\n",
-      "103    4.741151\n",
-      "104    4.700229\n",
-      "105    4.533232\n",
-      "106    4.244722\n",
-      "107    3.851777\n",
-      "108    3.342163\n",
-      "109    2.666264\n",
-      "110    1.794005\n",
-      "111    0.792477\n",
-      "112   -0.246896\n",
-      "113   -1.235269\n",
-      "114   -2.098843\n",
-      "115   -2.799281\n",
-      "116   -3.344990\n",
-      "117   -3.792249\n",
-      "118   -3.996149\n",
-      "119   -4.090003\n",
-      "120   -4.011682\n",
-      "121   -3.774225\n",
-      "122   -3.424816\n",
-      "123   -3.014317\n",
-      "124   -2.581522\n",
-      "125   -2.151410\n",
-      "126   -1.751519\n",
-      "127   -1.381069\n",
-      "128   -1.029640\n",
-      "129   -0.775537\n",
-      "130   -0.569407\n",
-      "131   -0.414333\n",
-      "132   -0.281908\n",
-      "133   -0.159685\n",
-      "134   -0.064013\n",
-      "135   -0.000800\n",
-      "136    0.063678\n",
-      "137    0.115373\n",
-      "138    0.142447\n",
-      "139    0.161937\n",
-      "140    0.162764\n",
-      "141    0.149797\n",
-      "142    0.130151\n",
-      "143    0.107044\n",
-      "144    0.069603\n",
-      "145    0.054080\n",
-      "146    0.055058\n",
-      "147    0.065736\n",
-      "148    0.078629\n",
-      "149    0.073531\n",
-      "150    0.066887\n",
-      "151    0.061951\n",
-      "152    0.060428\n",
-      "153    0.060551\n",
-      "154    0.063501\n",
-      "155    0.067694\n",
-      "156    0.071295\n",
-      "157    0.078969\n",
-      "158    0.087566\n",
-      "159    0.101992\n",
-      "160    0.118535\n",
-      "161    0.134008\n",
-      "162    0.141622\n",
-      "163    0.140321\n",
-      "164    0.135068\n",
-      "165    0.131406\n",
-      "166    0.144327\n",
-      "167    0.161272\n",
-      "168    0.186200\n",
-      "169    0.203035\n",
-      "170    0.209967\n",
-      "171    0.212988\n",
-      "172    0.215790\n",
-      "173    0.218090\n",
-      "174    0.227193\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#print(data['controller_right_vel.z'].to_string())"
    ]
