--- a/Python/start_and_end.ipynb
+++ b/Python/start_and_end.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,6 +330,9 @@
     "        min = float(data['controller_right_vel.z'][i])\n",
     "        neg = i\n",
     "\n",
+    "if min > 0:\n",
+    "    neg = pos\n",
+    "\n",
     "#for i in range(len(data['controller_right_vel.z'])-1):\n",
     "#    if abs(data['controller_right_vel.z'][i]) < 0.2 and abs(data['controller_right_vel.z'][i+1]) >= 0.2:\n",
     "#        start = i+1\n",
@@ -348,7 +351,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(82, 133)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,6 +400,9 @@
     "            min = float(data['controller_right_vel.z'][i])\n",
     "            neg = i\n",
     "\n",
+    "    if min > 0:\n",
+    "        neg = pos\n",
+    "\n",
     "    for i in range(pos, 0, -1):\n",
     "        if abs(data['controller_right_vel.z'][i]) >= 0.2 and abs(data['controller_right_vel.z'][i-1]) < 0.2:\n",
     "            start = i\n",
@@ -392,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +437,7 @@
        "(82, 133)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
