--- a/Python/start_and_end.ipynb
+++ b/Python/start_and_end.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['controller_right_vel_norm'] = (data['controller_right_vel'] - min(data['controller_right_vel'])) / (max(data['controller_right_vel']) - min(data['controller_right_vel']))"
+    "#data['controller_right_vel_norm'] = (data['controller_right_vel'] - min(data['controller_right_vel'])) / (max(data['controller_right_vel']) - min(data['controller_right_vel']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -309,9 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 283,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102\n"
+     ]
+    }
+   ],
    "source": [
     "start = 0\n",
     "end = len(data['controller_right_vel.z'])\n",
@@ -320,17 +328,28 @@
     "\n",
     "pos = -1\n",
     "neg = -1\n",
-    "min = float('inf')\n",
-    "max = -float('inf')\n",
-    "for i in range(len(data['controller_right_vel.z'])):\n",
-    "    if float(data['controller_right_vel.z'][i]) > max:\n",
-    "        max = float(data['controller_right_vel.z'][i])\n",
+    "mn = float('inf')\n",
+    "mx = -float('inf')\n",
+    "apex = -1\n",
+    "max_apex = -float('inf')\n",
+    "\n",
+    "for i in range(len(data['controller_right_vel'])):\n",
+    "    if float(data['controller_right_vel'][i]) > max_apex:\n",
+    "        apex = i\n",
+    "        max_apex = data['controller_right_vel'][i]\n",
+    "print(apex)\n",
+    "\n",
+    "for i in range(apex):\n",
+    "    if float(data['controller_right_vel.z'][i]) > mx:\n",
+    "        mx = float(data['controller_right_vel.z'][i])\n",
     "        pos = i\n",
-    "    if float(data['controller_right_vel.z'][i]) < min:\n",
-    "        min = float(data['controller_right_vel.z'][i])\n",
+    "for i in range(apex, len(data['controller_right_vel.z'])):\n",
+    "    if float(data['controller_right_vel.z'][i]) < mn:\n",
+    "        mn = float(data['controller_right_vel.z'][i])\n",
     "        neg = i\n",
     "\n",
-    "if min > 0:\n",
+    "\n",
+    "if mn > 0:\n",
     "    neg = pos\n",
     "\n",
     "#for i in range(len(data['controller_right_vel.z'])-1):\n",
@@ -339,39 +358,28 @@
     "#        break\n",
     "\n",
     "for i in range(pos, 0, -1):\n",
-    "    if abs(data['controller_right_vel.z'][i]) >= 0.2 and abs(data['controller_right_vel.z'][i-1]) < 0.2:\n",
+    "    if data['controller_right_vel.z'][i] >= 0.2 and data['controller_right_vel.z'][i-1] < 0.2:\n",
     "        start = i\n",
     "        break\n",
     "\n",
     "for i in range(neg, len(data['controller_right_vel.z'])-1):\n",
-    "    if abs(data['controller_right_vel.z'][i]) >= 0.2 and abs(data['controller_right_vel.z'][i+1]) < 0.2:\n",
+    "    if -1*data['controller_right_vel.z'][i] >= 0.2 and -1*data['controller_right_vel.z'][i+1] < 0.2:\n",
     "        end = i+1\n",
     "        break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 254,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(82, 133)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(start, end)"
+    "#print(data['controller_right_vel.z'].to_string())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,6 +390,8 @@
     "\n",
     "    Returns tuple, of indices at which start and end of swing are estimated\n",
     "    to be.\n",
+    "\n",
+    "    PROVEN TO BE INACCURATE AT TIMES!\n",
     "    \"\"\"\n",
     "    start = 0\n",
     "    end = len(data['controller_right_vel.z'])\n",
@@ -418,41 +428,502 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"../Data/Combined/BHD_23.csv\"\n",
+    "def start_end_FHD_BHD_2(data):\n",
+    "    \"\"\"\n",
+    "    Another preliminary Function to determine start and end indices for a given FHD\n",
+    "    or BHD sensor trace.\n",
+    "\n",
+    "    Returns tuple, of indices at which start and end of swing are estimated\n",
+    "    to be.\n",
+    "\n",
+    "    ALSO NOT GREAT...\n",
+    "    \"\"\"\n",
+    "    start = 0\n",
+    "    end = len(data['controller_right_vel.z'])\n",
+    "\n",
+    "    data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)\n",
+    "\n",
+    "    apex = -1\n",
+    "    max = -float('inf')\n",
+    "    for i in range(len(data['controller_right_vel'])):\n",
+    "        if float(data['controller_right_vel'][i]) > max:\n",
+    "            max = float(data['controller_right_vel'][i])\n",
+    "            apex = i\n",
+    "    #print(apex)\n",
+    "\n",
+    "    for i in range(apex, 0, -1):\n",
+    "        if abs(data['controller_right_vel'][i]) >= 0.2 and abs(data['controller_right_vel'][i-1]) < 0.2:\n",
+    "            start = i\n",
+    "            break\n",
+    "\n",
+    "    for i in range(apex, len(data['controller_right_vel'])-1):\n",
+    "        if abs(data['controller_right_vel'][i]) >= 0.2 and abs(data['controller_right_vel'][i+1]) < 0.2:\n",
+    "            end = i+1\n",
+    "            break\n",
+    "    \n",
+    "    return (start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_end_FHD_BHD_3(data):\n",
+    "    \"\"\"\n",
+    "    Another preliminary Function to determine start and end indices for a given FHD\n",
+    "    or BHD sensor trace.\n",
+    "\n",
+    "    Returns tuple, of indices at which start and end of swing are estimated\n",
+    "    to be.\n",
+    "    \"\"\"\n",
+    "    start = 0\n",
+    "    end = len(data['controller_right_vel.z'])\n",
+    "\n",
+    "    data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)\n",
+    "\n",
+    "    pos = -1\n",
+    "    neg = -1\n",
+    "    min = float('inf')\n",
+    "    max = -float('inf')\n",
+    "    apex = -1\n",
+    "    max_apex = -float('inf')\n",
+    "\n",
+    "    for i in range(len(data['controller_right_vel'])):\n",
+    "        if float(data['controller_right_vel'][i]) > max_apex:\n",
+    "            apex = i\n",
+    "            max_apex = data['controller_right_vel'][i]\n",
+    "\n",
+    "    for i in range(apex):\n",
+    "        if float(data['controller_right_vel.z'][i]) > max:\n",
+    "            max = float(data['controller_right_vel.z'][i])\n",
+    "            pos = i\n",
+    "    for i in range(apex, len(data['controller_right_vel.z'])):\n",
+    "        if float(data['controller_right_vel.z'][i]) < min:\n",
+    "            min = float(data['controller_right_vel.z'][i])\n",
+    "            neg = i\n",
+    "\n",
+    "\n",
+    "    if min > 0:\n",
+    "        neg = pos\n",
+    "\n",
+    "    for i in range(pos, 0, -1):\n",
+    "        if data['controller_right_vel.z'][i] >= 0.2 and data['controller_right_vel.z'][i-1] < 0.2:\n",
+    "            start = i\n",
+    "            break\n",
+    "\n",
+    "    for i in range(neg, len(data['controller_right_vel.z'])-1):\n",
+    "        if -1*data['controller_right_vel.z'][i] >= 0.2 and -1*data['controller_right_vel.z'][i+1] < 0.2:\n",
+    "            end = i+1\n",
+    "            break\n",
+    "    \n",
+    "    return (start, end)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = \"../Data/Combined/VOL_46.csv\"\n",
     "data = pd.read_csv(filepath, index_col=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(82, 133)"
+       "(60, 108)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "start_end_FHD_BHD(data)"
+    "start_end_FHD_BHD(data) \n",
+    "# This finds the most postiive and negative controller_right_vel.z values. \n",
+    "# Then, moves forward and backwards until abs(controller_right_vel.z) reaches close to 0.\n",
+    "# Chooses (start, end) when close to 0.\n",
+    "\n",
+    "# Might not work, if there is no positive/negative velocity in z direction (bad swing, or volley: Only positive z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 108)"
+      ]
+     },
+     "execution_count": 373,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_end_FHD_BHD_2(data) # This just measures controller velocity. \n",
+    "\n",
+    "# Most accurate for volleys. \n",
+    "\n",
+    "# Practically gives us a bound for others, since sometimes, the swing ends, but velocity is not small enough."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60, 108)"
+      ]
+     },
+     "execution_count": 372,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_end_FHD_BHD_3(data) # A lot better accuracy overall, except in case of bad swing, or volley.\n",
+    "\n",
+    "# Same method as the start_end_FHD_BHD, but finds \"apex\", or highest velocity, of swing. \n",
+    "# Then, finds max positive before apex, and min negative after apex.\n",
+    "# Then, moves forward (negative) and backwards (positive) until abs(controller_right_vel.z) reaches close to 0.\n",
+    "\n",
+    "# Very accurate at finding \"start\" time for volley, but not end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Methods 1 and 3 are inaccurate for volleys, because they expect the right controller to move FORWARDS and then BACKWARDS,\n",
+    "and uses this expectation to calcualte start/end estimates.\n",
+    "\n",
+    "Volleys do not have an inherent \"back\" motion and need a separate start/end estimator. (Possibly Method 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(data['controller_right_vel.z'].to_string())"
+    "filepath = \"../Data/Combined/VOL_09.csv\"\n",
+    "data = pd.read_csv(filepath, index_col=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This might be our best estimate: \n",
+    "\n",
+    "In most cases, the second function just gives us a strict bounds on start/end coordinates.\n",
+    "In most cases, the third function gives us the most accurate estimate.\n",
+    "\n",
+    "In cases of volley, the third function cannot find an appropriate end. Thus, it uses the bound given by function 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60, 108)\n"
+     ]
+    }
+   ],
+   "source": [
+    "start1, end1 = start_end_FHD_BHD_2(data)\n",
+    "start2, end2 = start_end_FHD_BHD_3(data)\n",
+    "print((max(start1, start2), min(end1, end2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data = pd.read_csv(\"../Data/Combined/SRV_55.csv\", index_col=False)\n",
+    "#data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      0.015723\n",
+      "1      0.015817\n",
+      "2      0.012242\n",
+      "3      0.010653\n",
+      "4      0.008484\n",
+      "5      0.000611\n",
+      "6     -0.010151\n",
+      "7     -0.017786\n",
+      "8     -0.023536\n",
+      "9     -0.027566\n",
+      "10    -0.035332\n",
+      "11    -0.042347\n",
+      "12    -0.046195\n",
+      "13    -0.044333\n",
+      "14    -0.045397\n",
+      "15    -0.049819\n",
+      "16    -0.056165\n",
+      "17    -0.053818\n",
+      "18    -0.044208\n",
+      "19    -0.031845\n",
+      "20    -0.015762\n",
+      "21     0.005130\n",
+      "22     0.028471\n",
+      "23     0.050152\n",
+      "24     0.065816\n",
+      "25     0.075507\n",
+      "26     0.085411\n",
+      "27     0.095603\n",
+      "28     0.108022\n",
+      "29     0.121113\n",
+      "30     0.132460\n",
+      "31     0.142237\n",
+      "32     0.145118\n",
+      "33     0.140371\n",
+      "34     0.128323\n",
+      "35     0.108192\n",
+      "36     0.078037\n",
+      "37     0.041184\n",
+      "38    -0.007543\n",
+      "39    -0.067914\n",
+      "40    -0.137912\n",
+      "41    -0.216202\n",
+      "42    -0.308905\n",
+      "43    -0.392498\n",
+      "44    -0.481900\n",
+      "45    -0.569158\n",
+      "46    -0.650140\n",
+      "47    -0.723184\n",
+      "48    -0.788126\n",
+      "49    -0.827514\n",
+      "50    -0.837665\n",
+      "51    -0.836136\n",
+      "52    -0.812764\n",
+      "53    -0.764921\n",
+      "54    -0.703064\n",
+      "55    -0.621012\n",
+      "56    -0.505834\n",
+      "57    -0.357863\n",
+      "58    -0.145759\n",
+      "59     0.033388\n",
+      "60     0.265519\n",
+      "61     0.508503\n",
+      "62     0.759839\n",
+      "63     1.047892\n",
+      "64     1.385474\n",
+      "65     1.782840\n",
+      "66     2.209720\n",
+      "67     2.658625\n",
+      "68     3.128468\n",
+      "69     3.560357\n",
+      "70     3.866131\n",
+      "71     3.980957\n",
+      "72     3.872370\n",
+      "73     3.457669\n",
+      "74     2.710977\n",
+      "75     2.128059\n",
+      "76     1.772197\n",
+      "77     1.491501\n",
+      "78     1.158667\n",
+      "79     0.912601\n",
+      "80     0.791328\n",
+      "81     0.740747\n",
+      "82     0.691555\n",
+      "83     0.625911\n",
+      "84     0.567615\n",
+      "85     0.521147\n",
+      "86     0.466517\n",
+      "87     0.411306\n",
+      "88     0.373968\n",
+      "89     0.344146\n",
+      "90     0.319031\n",
+      "91     0.293603\n",
+      "92     0.273124\n",
+      "93     0.238124\n",
+      "94     0.197448\n",
+      "95     0.164967\n",
+      "96     0.137536\n",
+      "97     0.114340\n",
+      "98     0.106463\n",
+      "99     0.103747\n",
+      "100    0.091459\n",
+      "101    0.069147\n",
+      "102    0.055079\n",
+      "103    0.049404\n",
+      "104    0.041410\n",
+      "105    0.025654\n",
+      "106    0.002009\n",
+      "107   -0.019035\n",
+      "108   -0.038636\n",
+      "109   -0.056769\n",
+      "110   -0.073403\n",
+      "111   -0.089364\n",
+      "112   -0.115551\n",
+      "113   -0.139977\n",
+      "114   -0.152552\n",
+      "115   -0.150087\n",
+      "116   -0.145193\n",
+      "117   -0.154718\n",
+      "118   -0.176288\n",
+      "119   -0.197273\n",
+      "120   -0.214890\n",
+      "121   -0.228168\n",
+      "122   -0.251856\n",
+      "123   -0.289680\n",
+      "124   -0.329424\n",
+      "125   -0.367561\n",
+      "126   -0.399318\n",
+      "127   -0.415624\n",
+      "128   -0.425120\n",
+      "129   -0.444624\n",
+      "130   -0.471678\n",
+      "131   -0.502731\n",
+      "132   -0.531258\n",
+      "133   -0.555981\n",
+      "134   -0.571670\n",
+      "135   -0.572209\n",
+      "136   -0.566087\n",
+      "137   -0.562233\n",
+      "138   -0.576647\n",
+      "139   -0.605072\n",
+      "140   -0.626680\n",
+      "141   -0.625870\n",
+      "142   -0.611305\n",
+      "143   -0.597137\n",
+      "144   -0.588870\n",
+      "145   -0.594450\n",
+      "146   -0.612667\n",
+      "147   -0.630008\n",
+      "148   -0.627372\n",
+      "149   -0.608132\n",
+      "150   -0.585297\n",
+      "151   -0.571504\n",
+      "152   -0.572924\n",
+      "153   -0.579711\n",
+      "154   -0.580912\n",
+      "155   -0.569446\n",
+      "156   -0.552146\n",
+      "157   -0.536238\n",
+      "158   -0.529895\n",
+      "159   -0.530582\n",
+      "160   -0.536988\n",
+      "161   -0.544802\n",
+      "162   -0.554274\n",
+      "163   -0.557461\n",
+      "164   -0.554489\n",
+      "165   -0.550447\n",
+      "166   -0.550510\n",
+      "167   -0.556863\n",
+      "168   -0.569346\n",
+      "169   -0.574780\n",
+      "170   -0.570655\n",
+      "171   -0.559620\n",
+      "172   -0.548250\n",
+      "173   -0.539436\n",
+      "174   -0.534101\n",
+      "175   -0.531729\n",
+      "176   -0.526958\n",
+      "177   -0.514531\n",
+      "178   -0.493440\n",
+      "179   -0.468441\n",
+      "180   -0.444040\n",
+      "181   -0.423304\n",
+      "182   -0.408673\n",
+      "183   -0.399705\n",
+      "184   -0.388010\n",
+      "185   -0.371822\n",
+      "186   -0.352044\n",
+      "187   -0.333018\n",
+      "188   -0.319084\n",
+      "189   -0.309582\n",
+      "190   -0.304646\n",
+      "191   -0.299204\n",
+      "192   -0.292293\n",
+      "193   -0.284693\n",
+      "194   -0.279172\n",
+      "195   -0.274636\n",
+      "196   -0.269417\n",
+      "197   -0.263055\n",
+      "198   -0.259230\n",
+      "199   -0.260015\n",
+      "200   -0.258374\n",
+      "201   -0.252637\n",
+      "202   -0.246268\n",
+      "203   -0.237965\n",
+      "204   -0.229867\n",
+      "205   -0.218748\n",
+      "206   -0.205423\n",
+      "207   -0.191430\n",
+      "208   -0.178681\n",
+      "209   -0.165572\n",
+      "210   -0.151652\n",
+      "211   -0.138210\n",
+      "212   -0.121420\n",
+      "213   -0.105315\n",
+      "214   -0.092370\n",
+      "215   -0.084555\n",
+      "216   -0.080672\n",
+      "217   -0.074769\n",
+      "218   -0.067049\n",
+      "219   -0.059785\n",
+      "220   -0.053411\n",
+      "221   -0.049891\n",
+      "222   -0.049629\n",
+      "223   -0.049985\n",
+      "224   -0.047899\n",
+      "225   -0.044025\n",
+      "226   -0.038390\n",
+      "227   -0.032561\n",
+      "228   -0.027644\n",
+      "229   -0.025693\n",
+      "230   -0.026936\n",
+      "231   -0.029468\n",
+      "232   -0.029898\n",
+      "233   -0.027777\n",
+      "234   -0.023570\n",
+      "235   -0.019850\n",
+      "236   -0.013965\n",
+      "237   -0.011808\n",
+      "238   -0.011225\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['controller_right_vel.z'].to_string())\n"
    ]
   }
  ],
