Latest changes, added stat_classifier to data_analysis, etc.

--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from data_analysis import get_start, get_start_end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,21 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
     "idx_max = -1\n",
-    "max = -float('inf')\n",
+    "mx = -float('inf')\n",
     "for i in range(len(data['controller_right_vel'])):\n",
-    "    if float(data['controller_right_vel'][i]) > max:\n",
-    "        max = float(data['controller_right_vel'][i])\n",
+    "    if float(data['controller_right_vel'][i]) > mx:\n",
+    "        mx = float(data['controller_right_vel'][i])\n",
     "        idx_max = i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -66,38 +67,18 @@
        "(10.075528058846395, 103)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max, idx_max"
+    "mx, idx_max"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.864957"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['controller_right_vel.y'][idx_max]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -119,10 +100,10 @@
     "\n",
     "\n",
     "idx_max = -1\n",
-    "max = -float('inf')\n",
+    "mx = -float('inf')\n",
     "for i in range(len(data['controller_right_vel'])):\n",
-    "    if float(data['controller_right_vel'][i]) > max:\n",
-    "        max = float(data['controller_right_vel'][i])\n",
+    "    if float(data['controller_right_vel'][i]) > mx:\n",
+    "        mx = float(data['controller_right_vel'][i])\n",
     "        idx_max = i\n",
     "\n",
     "print(data['controller_right_vel.y'][idx_max])\n",
@@ -132,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -172,75 +153,13 @@
        "'BHD'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "simple_stat_classifier(\"../Data/Combined/BHD_13.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actual = []\n",
-    "predicted = []\n",
-    "csv_number = []\n",
-    "for action in ['BHD','FHD','VOL','SRV']:\n",
-    "    for i in range(1,91):\n",
-    "        filepath = \"../Data/Combined/\" + action + \"_\" + str(i).zfill(2) + \".csv\"\n",
-    "        actual.append(action)\n",
-    "        predicted.append(simple_stat_classifier(filepath))\n",
-    "        csv_number.append(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BHD FHD 84\n",
-      "VOL SRV 13\n",
-      "VOL SRV 67\n",
-      "SRV VOL 3\n",
-      "SRV VOL 9\n",
-      "SRV BHD 11\n",
-      "SRV VOL 73\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(actual)):\n",
-    "    if actual[i] != predicted[i]:\n",
-    "        print(actual[i], predicted[i], csv_number[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9805555555555555"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metrics.accuracy_score(actual, predicted)"
    ]
   },
   {
@@ -260,6 +179,190 @@
     " - If < 0, FHD. (Controller moving to the left)\n",
     "\n",
     "But magnitude is dependent on person, so we might not be able to use that... Might only be able to use +/-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_accuracy(classifier, errors=False):\n",
+    "    \"\"\"\n",
+    "    Function to test how accurate your classifier is. Takes a classifier \n",
+    "    (a function) that takes a filepath, and returns a string, either \n",
+    "    'BHD', 'FHD', 'VOL', or 'SRV'. \n",
+    "\n",
+    "    Also can specifiy whether to print errors.\n",
+    "\n",
+    "    Returns accuracy score of the classifier. \n",
+    "    \"\"\"\n",
+    "    actual = []\n",
+    "    predicted = []\n",
+    "    csv_number = []\n",
+    "    for action in ['BHD','FHD','VOL','SRV']:\n",
+    "        for i in range(1,91):\n",
+    "            filepath = \"../Data/Combined/\" + action + \"_\" + str(i).zfill(2) + \".csv\"\n",
+    "            actual.append(action)\n",
+    "            predicted.append(classifier(filepath))\n",
+    "            csv_number.append(i)\n",
+    "    \n",
+    "    if errors:\n",
+    "        for i in range(len(actual)):\n",
+    "            if actual[i] != predicted[i]:\n",
+    "                print(actual[i], predicted[i], csv_number[i])\n",
+    "    \n",
+    "    return metrics.accuracy_score(actual, predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_stat_classifier_2(filepath):\n",
+    "    \"\"\"\n",
+    "    Takes a filepath containing a sensor trace. First trims data according to\n",
+    "    isolate the swing action. Then, based on trimmed csv file, runs statistical\n",
+    "    classifier to determine swing type.\n",
+    "\n",
+    "    Returns string, determining guessed swing type.\n",
+    "    \"\"\"\n",
+    "    data = pd.read_csv(filepath, index_col=False)\n",
+    "    data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)\n",
+    "\n",
+    "    start, end = get_start_end(data) # Determine start and end of swing\n",
+    "    data = data[start:end]\n",
+    "    \n",
+    "    idx_max = -1\n",
+    "    mx = -float('inf') # Finding moment of maximum velocity\n",
+    "    for i in range(len(data['controller_right_vel'])):\n",
+    "        i += start\n",
+    "        if float(data['controller_right_vel'][i]) > mx:\n",
+    "            mx = float(data['controller_right_vel'][i])\n",
+    "            idx_max = i\n",
+    "\n",
+    "    if float(data['controller_right_vel.y'][idx_max]) > 0: # If swing moves upwards\n",
+    "        # BHD or FHD\n",
+    "        if float(data['controller_right_vel.x'][idx_max]) < 0: # If swing moves left/right\n",
+    "            return \"FHD\"\n",
+    "        else:\n",
+    "            return \"BHD\"\n",
+    "    else:\n",
+    "        # SRV or VOL    # Finding peak of controller, relative to headset\n",
+    "        if max((data['controller_right_pos.y'] - data['headset_pos.y'])) > 0.2: # 0.2 may need to be normalized\n",
+    "        #if max((data['controller_right_pos.y'] - data['headset_pos.y'])) > 0: # This works for Ian/Lucien, but gets Jason wrong every single time lol\n",
+    "            return \"SRV\"\n",
+    "        else:\n",
+    "            return \"VOL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TESTING BELOW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = \"../Data/Combined/SRV_57.csv\"\n",
+    "data = pd.read_csv(filepath, index_col=False)\n",
+    "\n",
+    "data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)\n",
+    "\n",
+    "idx_max = -1\n",
+    "mx = -float('inf')\n",
+    "for i in range(len(data['controller_right_vel'])):\n",
+    "    if float(data['controller_right_vel'][i]) > mx:\n",
+    "        mx = float(data['controller_right_vel'][i])\n",
+    "        idx_max = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.40462167"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = get_start(data)\n",
+    "data['headset_pos.y'][s] - data['controller_right_pos.y'][s]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015195051647058843"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['headset_pos.y'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9805555555555555"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_accuracy(simple_stat_classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9944444444444445"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_accuracy(simple_stat_classifier_2)"
    ]
   }
  ],
