--- a/Python/start_and_end.ipynb
+++ b/Python/start_and_end.ipynb
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "(73, 125)"
       ]
      },
-     "execution_count": 511,
+     "execution_count": 517,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "(73, 125)"
       ]
      },
-     "execution_count": 512,
+     "execution_count": 518,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "(0, 146)"
       ]
      },
-     "execution_count": 513,
+     "execution_count": 519,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,6 +1154,66 @@
    ],
    "source": [
     "print(data['controller_right_vel.z'].to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 515,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_start(data):\n",
+    "    \"\"\"\n",
+    "    Another preliminary Function to determine start index for a given FHD\n",
+    "    or BHD sensor trace.\n",
+    "\n",
+    "    Returns integer, of index at which start of swing is estimated to be.\n",
+    "    \"\"\"\n",
+    "    start = 0\n",
+    "\n",
+    "    data['controller_right_vel'] = (data['controller_right_vel.x'] ** 2 + data['controller_right_vel.y'] ** 2 + data['controller_right_vel.z'] ** 2) ** (1/2)\n",
+    "\n",
+    "    pos = -1\n",
+    "    max = -float('inf')\n",
+    "    apex = -1\n",
+    "    max_apex = -float('inf')\n",
+    "\n",
+    "    for i in range(len(data['controller_right_vel'])): # Finding moment of highest Velocity\n",
+    "        if float(data['controller_right_vel'][i]) > max_apex:\n",
+    "            apex = i\n",
+    "            max_apex = data['controller_right_vel'][i]\n",
+    "\n",
+    "    for i in range(apex):\n",
+    "        if float(data['controller_right_vel.z'][i]) > max: # Finding moment of highest velocity forwards, up to apex\n",
+    "            max = float(data['controller_right_vel.z'][i])\n",
+    "            pos = i\n",
+    "\n",
+    "    for i in range(pos, 0, -1): # Search backwards from moment of highest velocity forwards. Finds moment when z-velocity becomes significant.\n",
+    "        if data['controller_right_vel.z'][i] >= 0.2 and data['controller_right_vel.z'][i-1] < 0.2:\n",
+    "            start = i\n",
+    "            break\n",
+    "    \n",
+    "    return start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 516,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73"
+      ]
+     },
+     "execution_count": 516,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_start(data)"
    ]
   }
  ],
