WIP Follow-through script in data_analysis.ipynb

--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -1225,26 +1225,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "408.073"
-      ]
-     },
-     "execution_count": 397,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['controller_right_rot.y'][start] + data['controller_right_rot.y'][end]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 430,
    "metadata": {},
    "outputs": [
@@ -1315,64 +1295,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 501,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-0.03261396, -0.7293273)\n",
+      "(0.02082731, -0.3959379)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((data['headset_pos.x'][end], data['headset_pos.z'][end]))\n",
+    "print((data['controller_right_pos.x'][end], data['controller_right_pos.z'][end]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 562,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.05344127, 0.3333894, -0.08902889000000001)\n"
+     ]
+    }
+   ],
+   "source": [
+    "filepath = \"../Data/Combined/BHD_85.csv\"\n",
+    "data = pd.read_csv(filepath, index_col=False)\n",
+    "\n",
+    "prediction = simple_stat_classifier_2(filepath)\n",
+    "start, end = get_start_end_after_classification(data, prediction)\n",
+    "\n",
+    "print((data['controller_right_pos.x'][end] - data['headset_pos.x'][end], data['controller_right_pos.z'][end] - data['headset_pos.z'][end], data['controller_right_pos.y'][end] - data['headset_pos.y'][end]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 471,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-0.17144652999999999, -0.6926004899999999)\n",
-      "(-0.25510505, -0.286939)\n"
-     ]
-    }
-   ],
    "source": [
-    "print(vec1)\n",
-    "print(vec2)"
+    "def get_follow_through(filepath, prediction=None, start_end = None):\n",
+    "    data = pd.read_csv(filepath, index_col=False)\n",
+    "\n",
+    "    if not prediction:\n",
+    "        prediction = simple_stat_classifier_2(filepath)\n",
+    "    if not start_end:\n",
+    "        start, end = get_start_end_after_classification(data, prediction)\n",
+    "    else:\n",
+    "        start, end = start_end\n",
+    "\n",
+    "    tup = (data['controller_right_pos.x'][end] - data['headset_pos.x'][end], data['controller_right_pos.z'][end] - data['headset_pos.z'][end], data['controller_right_pos.y'][end] - data['headset_pos.y'][end])\n",
+    "\n",
+    "    if prediction == \"FHD\":\n",
+    "        success = True\n",
+    "        if tup[2] < -0.2:\n",
+    "            print(\"Try to follow-through a bit higher, over your shoulder!\")\n",
+    "            success = False\n",
+    "        if tup[1] > 0:\n",
+    "            print(\"Try to end your swing further back!\")\n",
+    "            success = False\n",
+    "        if tup[0] > 0:\n",
+    "            print(\"Make sure to complete your follow-through on the left side of your body!\")\n",
+    "            success = False\n",
+    "        if success:\n",
+    "            print(\"Nice follow through!\")\n",
+    "\n",
+    "    if prediction == \"BHD\":\n",
+    "        success = True\n",
+    "        if tup[2] < -0.2:\n",
+    "            print(\"Try to follow-through a bit higher, over your shoulder!\")\n",
+    "            success = False\n",
+    "        if tup[1] > 0:\n",
+    "            print(\"Try to end your swing further back!\")\n",
+    "            success = False\n",
+    "        if tup[0] > 0:\n",
+    "            print(\"Make sure to complete your follow-through on the right side of your body!\")\n",
+    "            success = False\n",
+    "        if success:\n",
+    "            print(\"Nice follow through!\")\n",
+    "\n",
+    "    if prediction == \"SRV\":\n",
+    "        pass\n",
+    "\n",
+    "    return "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 477,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "328.8925759288756\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 454,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "304.8685615614739"
-      ]
-     },
-     "execution_count": 454,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
