--- a/Python/data_analysis.ipynb
+++ b/Python/data_analysis.ipynb
@@ -1314,19 +1314,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 581,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.05344127, 0.3333894, -0.08902889000000001)\n"
+      "(0.23239130000000002, -0.09658070000000007, -0.6436957)\n"
      ]
     }
    ],
    "source": [
-    "filepath = \"../Data/Combined/BHD_85.csv\"\n",
+    "filepath = \"../Data/Combined/SRV_15.csv\"\n",
     "data = pd.read_csv(filepath, index_col=False)\n",
     "\n",
     "prediction = simple_stat_classifier_2(filepath)\n",
@@ -1337,7 +1337,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 572,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.54600852"
+      ]
+     },
+     "execution_count": 572,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['headset_pos.y'][end] - data['controller_right_pos.y'][end]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 573,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3229801"
+      ]
+     },
+     "execution_count": 573,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max((data[\"controller_right_pos.y\"] - data[\"headset_pos.y\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 619,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,21 +1387,21 @@
     "    if not prediction:\n",
     "        prediction = simple_stat_classifier_2(filepath)\n",
     "    if not start_end:\n",
-    "        start, end = get_start_end_after_classification(data, prediction)\n",
+    "        _, end = get_start_end_after_classification(data, prediction)\n",
     "    else:\n",
-    "        start, end = start_end\n",
+    "        _, end = start_end\n",
     "\n",
     "    tup = (data['controller_right_pos.x'][end] - data['headset_pos.x'][end], data['controller_right_pos.z'][end] - data['headset_pos.z'][end], data['controller_right_pos.y'][end] - data['headset_pos.y'][end])\n",
     "\n",
     "    if prediction == \"FHD\":\n",
     "        success = True\n",
-    "        if tup[2] < -0.2:\n",
+    "        if tup[2] < -0.2: # Checks height of controller vs. height of headset\n",
     "            print(\"Try to follow-through a bit higher, over your shoulder!\")\n",
     "            success = False\n",
-    "        if tup[1] > 0:\n",
+    "        if tup[1] > 0: # Checks \"forward depth\" of controller vs. headset\n",
     "            print(\"Try to end your swing further back!\")\n",
     "            success = False\n",
-    "        if tup[0] > 0:\n",
+    "        if tup[0] > 0: # Checks left/right position of contrller vs. headset\n",
     "            print(\"Make sure to complete your follow-through on the left side of your body!\")\n",
     "            success = False\n",
     "        if success:\n",
@@ -1369,22 +1409,87 @@
     "\n",
     "    if prediction == \"BHD\":\n",
     "        success = True\n",
-    "        if tup[2] < -0.2:\n",
+    "        if tup[2] < -0.2: # Checks height of controller vs. height of headset\n",
     "            print(\"Try to follow-through a bit higher, over your shoulder!\")\n",
     "            success = False\n",
-    "        if tup[1] > 0:\n",
+    "        if tup[1] > 0: # Checks \"forward depth\" of controller vs. headset\n",
     "            print(\"Try to end your swing further back!\")\n",
     "            success = False\n",
-    "        if tup[0] > 0:\n",
+    "        if tup[0] < 0: # Checks left/right position of contrller vs. headset\n",
     "            print(\"Make sure to complete your follow-through on the right side of your body!\")\n",
     "            success = False\n",
     "        if success:\n",
     "            print(\"Nice follow through!\")\n",
     "\n",
     "    if prediction == \"SRV\":\n",
-    "        pass\n",
+    "        success = True\n",
+    "        if -1 * tup[2] < max(data[\"controller_right_pos.y\"] - data[\"headset_pos.y\"]):\n",
+    "            # Checks height of controller vs headset, makes sure difference is\n",
+    "            # at least as much as difference during peak of serve\n",
+    "            print(\"Try to finish a bit lower, near your waist!\")\n",
+    "            success = False\n",
+    "        if tup[1] > 0: # Checks \"forward depth\" of controller vs. headset\n",
+    "            print(\"Try to end your swing further back!\")\n",
+    "            success = False\n",
+    "        if tup[0] < 0: # Checks left/right position of contrller vs. headset\n",
+    "            print(\"Make sure to complete your follow-through on the left side of your body!\")\n",
+    "            success = False\n",
+    "        if success:\n",
+    "            print(\"Nice follow through!\")\n",
+    "    \n",
+    "    if prediction == \"VOL\":\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 625,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = \"../Data/Combined/VOL_85.csv\"\n",
+    "data = pd.read_csv(filepath, index_col=False)\n",
+    "prediction = simple_stat_classifier_2(filepath)\n",
+    "start, end = get_start_end_after_classification(data, prediction)\n",
     "\n",
-    "    return "
+    "get_follow_through(filepath, prediction=prediction, start_end = (start, end))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 618,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.03156389999999998, -0.5526802, -0.46449619999999997)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((data['controller_right_pos.x'][end] - data['headset_pos.x'][end], data['controller_right_pos.z'][end] - data['headset_pos.z'][end], data['controller_right_pos.y'][end] - data['headset_pos.y'][end]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 621,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5284434400000001"
+      ]
+     },
+     "execution_count": 621,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(data[\"controller_right_pos.y\"] - data[\"headset_pos.y\"])"
    ]
   }
  ],
